- Fix DotNetStats occasional data tearing under parallel collections. #173
- Improved wording of some error messages. #169
- Added Counter.IncTo(), Gauge.IncTo(), Gauge.DecTo(). #181
- Added Gauge.Set(DateTimeOffset) and Gauge.IncTo(DateTimeOffset). #181
- Improve .NET Framework 4.6.1 packaging to include the ValueTuple reference automatically. #179
* 3.3.0
- Add ability to filter requests by port number when exporting metrics. #160
* 3.2.1
- Fix NuGet packaging defect that caused reference failures after installing .2.0 on .NET Core 2.1 or newer. #158
* 3.2.0
- Enable custom HTTP client to be used in MetricPusher, allowing for Basic auth and more flexibility. #125
- Add DiagnosticSourceAdapter (.NET Core only). #153
- Improved compatibility with older .NET Framework versions. #155
* 3.1.4
- Fix timezone mismatch in Summary that led to unintended delays in buffer flushing. #149
* 3.1.3
- Fix regression introduced in 3.1.0 where MetricPusher does not always flush metrics before stopping.
* 3.1.2
- Fix defect where Histogram batch observations only incremented sum by one value, instead of entire batch. #147
* 3.1.1
- Added missing UTF-8 charset to Content-Type header, so non-ASCII characters are interpreted correctly by browsers.
* 3.1.0
- Added ICounter.NewTimer() (adds the value to the counter)
- Eliminated some needless allocations when trying to register a metric that is already registered. #134
- Added IHistogram.Count and IHistogram.Sum to expose aspects of collected data for inspection.
- Added Collector.GetAllLabelValues() to expose the list of child metrics by all their known label values.
- Metric export is now asynchronous internally to be compatible with ASP.NET Core 3.0 default configuration.
- Added CollectorRegistry.CollectAndExportAsTextAsync() to support metric data export via arbitrary custom endpoints.
* 3.0.3
- Now backward compatible with ASP.NET Core 2.1 (was 2.2+)
* 3.0.2
- Fix defect where histogram sum failed to increment.
* 3.0.1