@@ -1,0 +1,9 @@
+﻿using Microsoft.AspNetCore.Routing;
+
+namespace Prometheus
+{
+    interface ICapturedRouteDataFeature
+    {
+        RouteValueDictionary Values { get; }
+    }
+}
