@@ -6,6 +6,7 @@
 - Added Counter.IncTo(), Gauge.IncTo(), Gauge.DecTo(). #181
 - Added Gauge.Set(DateTimeOffset) and Gauge.IncTo(DateTimeOffset). #181
 - Improve .NET Framework 4.6.1 packaging to include the ValueTuple reference automatically. #179
+- ASP.NET Core HTTP metrics can now capture route data before it is overwritten by an exception handler. #177
 * 3.3.0
 - Add ability to filter requests by port number when exporting metrics. #160
 * 3.2.1
